<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.fragment.PrinterSettingsFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="700dp">

        <Switch
            android:id="@+id/offlineSwitch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:paddingEnd="0dp"
            android:paddingStart="8dp"
            android:text="@string/offline"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="?android:attr/listDivider"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/offlineSwitch" />

        <Spinner
            android:id="@+id/labelMakeListSpinner"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:dropDownWidth="match_parent"
            android:entries="@array/labelMakes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <Spinner
            android:id="@+id/labelTypeListSpinner"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:dropDownWidth="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/labelMakeListSpinner"
            app:layout_constraintTop_toTopOf="@+id/labelMakeListSpinner" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ipTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelTypeListSpinner">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ipTextInputEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789."
                android:hint="@string/ip"
                android:inputType="number|numberDecimal"
                android:paddingEnd="8dp"
                android:paddingStart="8dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/macTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ipTextInputLayout">

            <com.phearme.macaddressedittext.MacAddressEditText
                android:id="@+id/macTextInputEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mac"
                android:inputType="textUri"
                android:paddingEnd="8dp"
                android:paddingStart="8dp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/urlTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/macTextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/urlTextInputEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/url"
                android:paddingEnd="8dp"
                android:paddingStart="8dp" />
        </android.support.design.widget.TextInputLayout>

        <ImageButton
            android:id="@+id/saveButton"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/save"
            android:scaleType="fitEnd"
            android:src="@drawable/ic_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/urlTextInputLayout" />

        <TextView
            android:id="@+id/saveButtonLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="@color/colorHighlight"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/saveButton"
            app:layout_constraintEnd_toEndOf="@+id/saveButton"
            app:layout_constraintStart_toStartOf="@+id/saveButton"
            app:layout_constraintTop_toTopOf="@+id/saveButton" />

        <ImageButton
            android:id="@+id/testButton"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/test"
            android:scaleType="fitEnd"
            android:src="@drawable/ic_test_run"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/saveButton" />

        <TextView
            android:id="@+id/testButtonLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/testButton"
            app:layout_constraintEnd_toEndOf="@+id/testButton"
            app:layout_constraintStart_toStartOf="@+id/testButton"
            app:layout_constraintTop_toTopOf="@+id/testButton" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
